Added html & css to languages

--- a/index.html
+++ b/index.html
@@ -209,6 +209,15 @@
           <span class="dot-no"></span>
         </div>
         <div class="row dots">
+          <div class="col-md-6 col-sm-12 mb-3">HTML & CSS</div>
+          <span class="dot">&#8226;</span>
+          <span class="dot">&#8226;</span>
+          <span class="dot">&#8226;</span>
+          <span class="dot-no"></span>
+          <span class="dot-no"></span>
+          <span class="dot-no"></span>
+        </div>
+        <div class="row dots">
           <div class="col-md-6 col-sm-12 mb-3">JavaScript</div>
           <span class="dot">&#8226;</span>
           <span class="dot-no"></span>
