--- a/hrspecialist.html
+++ b/hrspecialist.html
@@ -17,10 +17,16 @@
 <body class="subsite">
 
     <p class="ms-5 mt-5"><a href="/index.html" class="back-link"><strong>❮ </strong>Back To App</a></p>
+
     <div>
-        <h2 class="ms-5 mt-5">Specialist in personnel development</h2></br>
-        <p class="ms-5">Since March 2023 I take charge of the training program at <a href="https://karriere.ksb.ch/karriere/weiterbildung" class="clickable-item-subsite">Kantonsspital Baden</a>, 
-            streamline processes, and support the implementation of a new learning management system.
+        <h2 class="ms-5 mt-5">Since 2024: Senior Consultant Diagnostics</h2></br>
+        <p class="ms-5">From my customer to my employer: I am very happy that I got the opportunity to get involved as a member of the team diagnostics at <a href="https://joerg-lienert.ch" class="clickable-item-subsite">Jörg Lienert AG</a>.
+            Together we are committed to high-quality and humane management diagnostics.
+    </div>
+    <div>
+        <h2 class="ms-5 mt-5">Since 2023: Specialist in personnel development</h2></br>
+        <p class="ms-5">In this role I take care of the training program at <a href="https://karriere.ksb.ch/karriere/weiterbildung" class="clickable-item-subsite">Kantonsspital Baden</a>, 
+            streamline processes, develop new concepts like IT training programms or support the implementation of a new learning management system.
     </div>
 
 
