--- a/index.html
+++ b/index.html
@@ -24,14 +24,26 @@
         <h2>career</h2>
 
         <div class="row">
-          <div class="col-1">2023 </div>
+          <div class="col-1">2025 </div>
           <a class="col-4 text-center background-5 clickable-item" href="/freelancer.html">own business</a>
+          <a class="col-4 text-center background-7 clickable-item" href="/hrspecialist.html">senior consultant</a>
+        </div>
+
+        <div class="row">
+          <div class="col-1">2024 </div>
+          <div class="col-4 text-center white background-5">Zurich</div>
           <a class="col-4 text-center background-7 clickable-item" href="/hrspecialist.html">HR specialist</a>
+        </div>
+
+        <div class="row">
+          <div class="col-1">2023 </div>
+          <a class="col-4 text-center background-5 clickable-item" href="/freelancer.html"></a>
+          <div class="col-4 text-center background-7 white">Luzern, Baden</div>
         </div>
 
           <div class="row">
             <div class="col-1">2022 </div>
-            <div class="col-4 text-center white background-5">Zurich</div>
+            <div class="col-4 text-center white background-5"></div>
             <a class="col-4 text-center background-6 clickable-item" href="/consultant.html">educational</a>
           </div>
 
@@ -203,7 +215,7 @@
           <div class="col-md-6 col-sm-12 mb-3">English</div>
           <span class="dot">&#8226;</span>
           <span class="dot">&#8226;</span>
-          <span class="dot-no"></span>
+          <span class="dot">&#8226;</span>
           <span class="dot-no"></span>
           <span class="dot-no"></span>
           <span class="dot-no"></span>
