--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="row">
           <div class="col-1">2025 </div>
           <a class="col-4 text-center background-5 clickable-item" href="/freelancer.html">own business</a>
-          <a class="col-4 text-center background-7 clickable-item" href="/hrspecialist.html">senior consultant</a>
+          <a class="col-4 text-center background-7 clickable-item" href="/hrspecialist.html">sen. consultant</a>
         </div>
 
         <div class="row">
@@ -55,7 +55,7 @@
       
           <div class="row">
             <div class="col-1">2020 </div>
-            <a class="col-4 text-center background-5 clickable-item" href="/freelancer.html">network partner</a>
+            <a class="col-4 text-center background-5 clickable-item" href="/freelancer.html">networkpartner</a>
             <div class="col-4 text-center background-6 white">St.Gallen</div>
           </div>
       
