--- a/hrspecialist.html
+++ b/hrspecialist.html
@@ -20,7 +20,7 @@
 
     <div>
         <h2 class="ms-5 mt-5">Since 2024: Senior Consultant Diagnostics</h2></br>
-        <p class="ms-5">From my customer to my employer: I am very happy that I got the opportunity to get involved as a member of the team diagnostics at <a href="https://joerg-lienert.ch" class="clickable-item-subsite">Jörg Lienert AG</a>.
+        <p class="ms-5">From my client to my employer: I am very happy that I got the opportunity to get involved as a member of the team diagnostics at <a href="https://joerg-lienert.ch" class="clickable-item-subsite">Jörg Lienert AG</a>.
             Together we are committed to high-quality and humane management diagnostics.
     </div>
     <div>
